--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
   <groupId>strategicDevelopers.strategicPlayer</groupId>
   <artifactId>strategic-player</artifactId>
   <packaging>jar</packaging>
-  <version>1.0-SNAPSHOT</version>
+  <version>1.0</version>
   <name>strategic-player</name>
   <url>http://maven.apache.org</url>
   <dependencies>
