updated pom: added jar plugin

--- a/pom.xml
+++ b/pom.xml
@@ -6,6 +6,23 @@
   <packaging>jar</packaging>
   <version>1.0</version>
   <name>strategic-player</name>
+  <build>
+    <plugins>
+      <plugin>
+	<groupId>org.apache.maven.plugins</groupId>
+	<artifactId>maven-jar-plugin</artifactId>
+	<version>2.4</version>
+	<configuration>
+	  <archive>
+	    <manifest>
+	      <addClasspath>true</addClasspath>
+	      <mainClass>strategicDevelopers.strategicPlayer</mainClass>
+	    </manifest>
+	  </archive>
+	</configuration>
+      </plugin>
+    </plugins>
+  </build>
   <url>http://maven.apache.org</url>
   <dependencies>
     <dependency>
