--- a/build.xml
+++ b/build.xml
@@ -26,7 +26,7 @@
     </not>
   </condition>
     <!-- identify main class -->
-  <property name="mainclass" value="StrategicPlayerImpl"/>
+  <property name="mainclass" value="strategicDevelopers.strategicPlayer.TwoCoinFourSlotPlayer"/>
     <!-- checkstyle properties -->
   <property name="checkstyle.jar" value="${lib}/checkstyle.jar"/>
   <property name="checkstyle.xsl" value="${lib}/checkstyle.xsl"/>
